@@ -23,12 +23,16 @@ EixRc& get_eixrc(const char *varprefix) {
 	eix_assert_static(static_eixrc == NULLPTR);
 	static_eixrc = new EixRc(varprefix);
 
+#ifdef JUMBO_BUILD
+	fill_defaults(static_eixrc);
+#else
 	fill_defaults_part_1(static_eixrc);
 	fill_defaults_part_2(static_eixrc);
 	fill_defaults_part_3(static_eixrc);
 	fill_defaults_part_4(static_eixrc);
 	fill_defaults_part_5(static_eixrc);
 	fill_defaults_part_6(static_eixrc);
+#endif
 
 	static_eixrc->read();
 	return *static_eixrc;
